force-app/main/default/objects/Device__c/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <description>Unique device id for device type</description>
    <inlineHelpText>Unique device id for device type</inlineHelpText>
    <label>Device Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>